IJPL-228855 [regexp] add read actions to RegExp checker
GitOrigin-RevId: d08c9b7f8b27418eb7859f05f9a8f2433a57b918